--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,12 @@
 *::before {
   margin: 0;
   padding: 0;
-  box-sizing: inherit; }
+  box-sizing: inherit;
+}
 
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+}
 
 body {
   font-family: "Lato", sans-serif;
@@ -14,7 +16,8 @@ body {
   line-height: 1.7;
   color: #777;
   padding: 3rem;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 /* ----- Header -----*/
 .header {
@@ -23,30 +26,31 @@ body {
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.6), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
   background-size: cover;
   background-position: top;
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
-
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+}
 .header__logo-box {
   position: absolute;
   top: 4rem;
-  left: 4rem; }
-
+  left: 4rem;
+}
 .header__logo {
-  height: 3.5rem; }
-
+  height: 3.5rem;
+}
 .header__text-box {
   position: absolute;
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
-  text-align: center; }
+  text-align: center;
+}
 
 .heading-primary {
   color: #fff;
   text-transform: uppercase;
   margin-bottom: 6rem;
   backface-visibility: hidden;
-  /* A hack to improve animation */ }
-
+  /* A hack to improve animation */
+}
 .heading-primary--main {
   display: block;
   font-size: 6rem;
@@ -59,48 +63,62 @@ body {
     Other animation selectors
     animation-delay: 3s;
     animation-iteration-count: 3;
-    */ }
-
+    */
+}
 .heading-primary--sub {
   display: block;
   font-size: 2rem;
   font-weight: 700;
   letter-spacing: 1.75rem;
   animation: moveInRight 1s ease-out;
-  /* short-hand */ }
+  /* short-hand */
+}
 
 /* ----- Header Animation ----- */
 @keyframes moveInLeft {
   0% {
     opacity: 0;
-    transform: translateX(-10rem); }
+    transform: translateX(-10rem);
+  }
   80% {
-    transform: translateX(1rem); }
+    transform: translateX(1rem);
+  }
   100% {
     opacity: 1;
-    transform: translate(0); } }
-
+    transform: translate(0);
+  }
+}
 @keyframes moveInRight {
   0% {
     opacity: 0;
-    transform: translateX(10rem); }
+    transform: translateX(10rem);
+  }
   80% {
-    transform: translateX(-1rem); }
+    transform: translateX(-1rem);
+  }
   100% {
     opacity: 1;
-    transform: translate(0); } }
-
+    transform: translate(0);
+  }
+}
 @keyframes moveInBottom {
   0% {
     opacity: 0;
-    transform: translateY(2rem); }
+    transform: translateY(2rem);
+  }
   100% {
     opacity: 1;
-    transform: translate(0); } }
-
+    transform: translate(0);
+  }
+}
 /* ----- Button ----- */
-.btn:link,
-.btn:visited {
+.btn {
+  /*
+  pseudoelement to illustrate an illusion of an element
+   for animation and other effects. Must contain 'content'
+   */
+}
+.btn:link, .btn:visited {
   text-decoration: none;
   text-transform: uppercase;
   padding: 1.5rem 4rem;
@@ -109,24 +127,27 @@ body {
   transition: all 0.2s;
   /* shorthand for transition */
   position: relative;
-  font-size: 1.6rem; }
-
+  font-size: 1.6rem;
+}
 .btn:hover {
   transform: translateY(-3px);
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
-
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+}
+.btn:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+}
 .btn:active {
   transform: translateY(1px);
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
-
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+}
 .btn--white {
   background-color: #fff;
-  color: #777; }
-
-/*
-pseudoelement to illustrate an illusion of an element
- for animation and other effects. Must contain 'content'
- */
+  color: #777;
+}
+.btn--white::after {
+  background-color: #fff;
+}
 .btn::after {
   content: "";
   display: inline-block;
@@ -137,16 +158,12 @@ pseudoelement to illustrate an illusion of an element
   top: 0;
   left: 0;
   z-index: -1;
-  transition: all 0.4s; }
-
-.btn--white::after {
-  background-color: #fff; }
-
-.btn:hover::after {
-  transform: scaleX(1.4) scaleY(1.6);
-  opacity: 0; }
-
+  transition: all 0.4s;
+}
 .btn--animated {
   animation: moveInBottom 0.5s ease-out 0.75s;
   animation-fill-mode: backwards;
-  /* make button invisible on pageload */ }
+  /* make button invisible on pageload */
+}
+
+/*# sourceMappingURL=style.css.map */
