--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,5 +1,5 @@
 .row {
-  max-width: 1$grid-width;
+  max-width: $grid-width;
   background-color: #eee;
   margin: 0 auto;
 
@@ -10,12 +10,44 @@
 
   @include clearfix;
 
-  .col-1-of-2 {
-    width: calc((100% - #{$gutter-horizontal}) / 2);
+  /*  ^ selects only classes that begins with col- 
+    * selects only classes that contain col- 
+    $ selects only classes that end with col- */
+  [class^="col-"] {
     background-color: orangered;
     float: left;
     &:not(:last-child) {
       margin-right: $gutter-horizontal;
     }
+  }
+
+  .col-1-of-2 {
+    width: calc((100% - #{$gutter-horizontal}) / 2);
+  }
+
+  .col-1-of-3 {
+    width: calc((100% - 2 * #{$gutter-horizontal}) / 3);
+  }
+
+  .col-2-of-3 {
+    width: calc(
+      2 * ((100% - 2 * #{$gutter-horizontal}) / 3) + #{$gutter-horizontal}
+    );
+  }
+
+  .col-1-of-4 {
+    width: calc((100% - 3 * #{$gutter-horizontal}) / 4);
+  }
+
+  .col-2-of-4 {
+    width: calc(
+      2 * ((100% - 3 * #{$gutter-horizontal}) / 4) + #{$gutter-horizontal}
+    );
+  }
+
+  .col-3-of-4 {
+    width: calc(
+      3 * ((100% - 3 * #{$gutter-horizontal}) / 4) + 2 * (#{$gutter-horizontal})
+    );
   }
 }
