Add about section with header

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -29,6 +29,21 @@ body {
           */
   }
 
+  .heading-secondary {
+    font-size: 3.5rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    display: inline-block; // keep bg-img not to go full width
+    background-image: linear-gradient(
+      to right,
+      $color-primary-light,
+      $color-primary-dark
+    );
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+  }
+
   &--sub {
     display: block;
     font-size: 2rem;
