--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,16 @@ body {
         animation-iteration-count: 3;
         */
 }
+.heading-primary .heading-secondary {
+  font-size: 3.5rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  display: inline-block;
+  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+}
 .heading-primary--sub {
   display: block;
   font-size: 2rem;
@@ -209,6 +219,12 @@ body {
 }
 .row .col-3-of-4 {
   width: calc( 3 * ((100% - 3 * 6rem) / 4) + 2 * (6rem) );
+}
+
+.section-about {
+  background-color: #f7f7f7;
+  padding: 25rem 0;
+  margin-top: -20vh;
 }
 
 /*# sourceMappingURL=style.css.map */
