--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -29,21 +29,6 @@ body {
           */
   }
 
-  .heading-secondary {
-    font-size: 3.5rem;
-    font-weight: 700;
-    text-transform: uppercase;
-    display: inline-block; // keep bg-img not to go full width
-    background-image: linear-gradient(
-      to right,
-      $color-primary-light,
-      $color-primary-dark
-    );
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: transparent;
-  }
-
   &--sub {
     display: block;
     font-size: 2rem;
@@ -52,4 +37,20 @@ body {
 
     animation: moveInRight 1s ease-out; /* short-hand */
   }
+}
+
+.heading-secondary {
+  font-size: 3.5rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  display: inline-block; // keep bg-img not to go full width
+  background-image: linear-gradient(
+    to right,
+    $color-primary-light,
+    $color-primary-dark
+  );
+  // cut bg-img to only be where text is, font color set to transparent
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
 }
