--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,12 @@ body {
   transform: translateY(0);
 }
 
+.composition__photo {
+  width: 55%;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+  border-radius: 0.2rem;
+}
+
 /* ----- Header -----*/
 .header {
   height: 95vh;
