--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,5 @@
 @import "abstracts/variables";
-@import "abstracts/mixins";
+@import "abstracts/mixin";
 @import "abstracts/functions";
 
 @import "base/base";
@@ -8,7 +8,9 @@
 @import "base/utilities";
 
 @import "components/button";
+@import "components/card";
 @import "components/composition";
+@import "components/feature-box";
 
 @import "layout/header";
 @import "layout/grid";
