--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,4 +1,5 @@
 .card {
+  // Functionality
   height: 50rem;
   // The lower the value the more dramatic effect
   perspective: 150rem;
@@ -35,10 +36,34 @@
 
   // On hover the side transform
   &:hover &__side--front {
-    transform: rotateY(180deg);
+    transform: rotateY(-180deg);
   }
 
   &:hover &__side--back {
     transform: rotateY(0);
+  }
+
+  // Front side styling
+  &__picture {
+    background-size: cover;
+    height: 23rem;
+    background-blend-mode: screen;
+
+    &--1 {
+      background-image: linear-gradient(
+          to right bottom,
+          $color-secondary-light,
+          $color-secondary-dark
+        ),
+        url("../img/nat-5.jpg");
+    }
+
+    &--2 {
+      background-image: url("../img/nat-5.jpg");
+    }
+
+    &--3 {
+      background-image: url("../img/nat-5.jpg");
+    }
   }
 }
