--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -15,6 +15,8 @@
     width: 100%;
     backface-visibility: hidden;
     border-radius: 0.3rem;
+    // prevent image corners to overflow border-radius property
+    overflow: hidden;
     box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
 
     &--front {
@@ -48,6 +50,8 @@
     background-size: cover;
     height: 23rem;
     background-blend-mode: screen;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
 
     &--1 {
       background-image: linear-gradient(
