--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,13 +1,15 @@
 .card {
   // Functionality
-  height: 50rem;
+  // Height of the entire card
+  height: 52rem;
   // The lower the value the more dramatic effect
   perspective: 150rem;
   -moz-perspective: 150rem;
   position: relative;
 
   &__side {
-    height: 50rem;
+    // Height of the two sides
+    height: 52rem;
     transition: all 0.8s ease;
     position: absolute;
     top: 0;
@@ -68,6 +70,53 @@
 
     &--3 {
       background-image: url("../img/nat-5.jpg");
+    }
+  }
+
+  &__heading {
+    font-size: 2.8rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    text-align: right;
+    color: $color-white;
+    position: absolute;
+    top: 12rem;
+    right: 2rem;
+    width: 75%;
+  }
+
+  &__heading-span {
+    padding: 1rem 1.5rem;
+    // Set the heading to two entities to get padding
+    // at the 'a' and before the 'e'
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone;
+    &--1 {
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($color-secondary-light, 0.85),
+        rgba($color-secondary-dark, 0.85)
+      );
+    }
+  }
+
+  &__details {
+    padding: 3rem;
+
+    ul {
+      margin: 0 auto;
+      list-style: none;
+      width: 80%;
+
+      li {
+        text-align: center;
+        font-size: 1.5rem;
+        padding: 1rem;
+
+        &:not(:last-child) {
+          border-bottom: 0.1rem solid $color-grey-light-2;
+        }
+      }
     }
   }
 }
