--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,10 @@ body {
   margin-top: 8rem;
 }
 
+.u-margin-top-huge {
+  margin-top: 10rem;
+}
+
 /* ----- Button ----- */
 .btn {
   /*
@@ -266,6 +270,8 @@ body {
   background-blend-mode: screen;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+  border-top-left-radius: 0.3rem;
+  border-top-right-radius: 0.3rem;
 }
 .card__picture--1 {
   background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url("../img/nat-5.jpg");
@@ -395,6 +401,15 @@ body {
   transform: translateY(-1.5rem) scale(1.03);
 }
 
+.story {
+  width: 75%;
+  margin: 0 auto;
+  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  border-radius: 0.3rem;
+  padding: 6rem;
+}
+
 /* ----- Header -----*/
 .header {
   height: 95vh;
@@ -480,8 +495,13 @@ body {
 
 .section-tours {
   background-color: #f7f7f7;
-  padding: 25rem 0 50rem 0;
+  padding: 25rem 0 15rem 0;
   margin-top: -10rem;
+}
+
+.section-stories {
+  padding: 15rem 0;
+  background-color: #f7f7f7;
 }
 
 /*# sourceMappingURL=style.css.map */
