--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -70,6 +70,9 @@
     background-blend-mode: screen;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    // Overflow hidden is overrun by clip-path, set border radius manually instead
+    border-top-left-radius: 0.3rem;
+    border-top-right-radius: 0.3rem;
 
     &--1 {
       background-image: linear-gradient(
