Add second story and styles text with shape outside

--- a/css/style.css
+++ b/css/style.css
@@ -408,6 +408,25 @@ body {
   background-color: #fff;
   border-radius: 0.3rem;
   padding: 6rem;
+  padding-left: 9rem;
+  font-size: 1.6rem;
+  transform: skewX(-12deg);
+}
+.story__shape {
+  width: 15rem;
+  height: 15rem;
+  float: left;
+  -webkit-shape-outside: circle(50% at 50% 50%);
+  shape-outside: circle(50% at 50% 50%);
+  -webkit-clip-path: circle(50% at 50% 50%);
+  clip-path: circle(50% at 50% 50%);
+  transform: translateX(-3rem) skewX(12deg);
+}
+.story__img {
+  height: 100%;
+}
+.story__text {
+  transform: skewX(12deg);
 }
 
 /* ----- Header -----*/
@@ -417,8 +436,8 @@ body {
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.6), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
   background-size: cover;
   background-position: top;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 79vh, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 79vh, 0 100%);
 }
 .header__logo-box {
   position: absolute;
@@ -499,7 +518,7 @@ body {
   margin-top: -10rem;
 }
 
-.section-stories {
+.section__stories {
   padding: 15rem 0;
   background-color: #f7f7f7;
 }
