--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -19,13 +19,44 @@
     -webkit-clip-path: circle(50% at 50% 50%);
     clip-path: circle(50% at 50% 50%);
     transform: translateX(-3rem) skewX(12deg);
+    position: relative; // to position hover text centered
   }
 
   &__img {
     height: 100%;
+    // positioning object in img center
+    transform: translateX(-15%) scale(1.4);
+    transition: all 0.5s;
+    backface-visibility: hidden; // hack to fix animation glitch
   }
 
   &__text {
     transform: skewX(12deg);
+  }
+
+  &__caption {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 20%);
+    color: $color-white;
+    font-size: 1.7rem;
+    text-transform: uppercase;
+    text-align: center;
+    opacity: 0;
+    transition: all 0.5s;
+    backface-visibility: hidden; // hack to fix animation glitch
+  }
+
+  &:hover &__caption {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
+
+  &:hover &__img {
+    transform: translateX(-15%) scale(1);
+    backface-visibility: hidden; // hack to fix animation glitch
+    // blur img and darkens img on hover (>100% makes img darker, <100% brighter)
+    filter: blur(0.3rem) brightness(80%);
   }
 }
