--- a/css/style.css
+++ b/css/style.css
@@ -152,6 +152,11 @@ body {
   z-index: -1;
   opacity: 0.2;
 }
+.bg-video__content {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
 /* ----- Button ----- */
 .btn {
@@ -415,7 +420,7 @@ body {
   width: 75%;
   margin: 0 auto;
   box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(255, 255, 255, 0.65);
   border-radius: 0.3rem;
   padding: 6rem;
   padding-left: 9rem;
@@ -557,6 +562,18 @@ body {
 .section__stories {
   padding: 15rem 0;
   position: relative;
+}
+
+.section-book {
+  padding: 15rem 0;
+  background-image: linear-gradient(to right bottom, #7ed56f, #28b485);
+}
+.section-book .book {
+  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url("../img/nat-10.jpg");
+  background-size: cover;
+  border-radius: 0.3rem;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
+  height: 50rem;
 }
 
 /*# sourceMappingURL=style.css.map */
