--- a/sass/components/_bg-video.scss
+++ b/sass/components/_bg-video.scss
@@ -6,4 +6,10 @@
   width: 100%;
   z-index: -1;
   opacity: 0.2;
+
+  &__content {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 }
