--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -14,6 +14,7 @@
     border-bottom: 0.3rem solid transparent; // prevent jump on focus
     width: 90%;
     display: block;
+    translate: all 0.3s;
 
     &:focus {
       outline: none;
@@ -25,6 +26,7 @@
       border-bottom: 0.3rem solid $color-secondary-dark;
     }
 
+    // 99% supported 2021
     &::-webkit-input-placeholder {
       color: $color-grey-dark-2;
     }
@@ -39,10 +41,56 @@
     transition: all 0.3s;
   }
 
+  &__radio-input {
+    display: none;
+  }
+
   &__input:placeholder-shown + &__label {
     // opacity is needed to animate an effect
     opacity: 0;
     visibility: hidden;
     transform: translateY(-4rem);
+  }
+
+  &__radio-group {
+    width: 49%;
+    display: inline-block;
+  }
+
+  &__radio-label {
+    font-size: $default-font-size;
+    cursor: pointer;
+    position: relative;
+    padding-left: 4.5rem;
+  }
+
+  &__radio-button {
+    height: 3rem;
+    width: 3rem;
+    border: 0.5rem solid $color-primary;
+    border-radius: 50%;
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    top: -0.4rem;
+
+    &::after {
+      content: "";
+      display: block;
+      height: 1.3rem;
+      width: 1.3rem;
+      background-color: $color-primary;
+      border-radius: 50%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      opacity: 0;
+      transition: opacity 0.2s;
+    }
+  }
+
+  &__radio-input:checked ~ &__radio-label &__radio-button::after {
+    opacity: 1;
   }
 }
