--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,5 +1,6 @@
 /* ----- Button ----- */
 .btn {
+  &,
   &:link,
   &:visited {
     text-decoration: none;
@@ -10,6 +11,10 @@
     transition: all 0.2s; /* shorthand for transition */
     position: relative;
     font-size: $default-font-size;
+
+    // Change for the <button> element
+    border: none;
+    cursor: pointer;
   }
 
   &:hover {
@@ -21,7 +26,9 @@
     }
   }
 
-  &:active {
+  &:active,
+  &:focus {
+    outline: none;
     transform: translateY(1px);
     box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
   }
