--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -167,10 +167,7 @@
 
   // Back side styling
   &__cta {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    @include absolute-centering;
     width: 90%;
     text-align: center;
   }
