--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,8 +1,23 @@
 .navigation {
   &__checkbox {
+    display: none;
   }
 
   &__button {
+    background-color: $color-white;
+    height: 7rem;
+    width: 7rem;
+    position: fixed;
+    top: 6rem;
+    right: 6rem;
+    border-radius: 50%;
+    z-index: 2000;
+    box-shadow: 0 1rem 3rem rgba($color-black, 0.1);
+    text-align: center;
+    cursor: pointer;
+  }
+
+  &__icon {
   }
 
   &__background {
@@ -16,12 +31,20 @@
       $color-primary-light,
       $color-primary-dark
     );
+    z-index: 999;
   }
 
   &__nav {
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 1500;
   }
 
   &__list {
+    @include absolute-centering;
   }
 
   &__item {
