Add pseudoelements and span to toggle navigation

--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -15,9 +15,7 @@
     box-shadow: 0 1rem 3rem rgba($color-black, 0.1);
     text-align: center;
     cursor: pointer;
-  }
-
-  &__icon {
+    text-align: center;
   }
 
   &__background {
@@ -88,6 +86,7 @@
     }
   }
 
+  // Functionality
   &__checkbox:checked ~ &__background {
     transform: scale(80);
   }
@@ -95,5 +94,35 @@
   &__checkbox:checked ~ &__nav {
     opacity: 1;
     width: 100%;
+  }
+
+  //Icon
+  &__icon {
+    position: relative;
+    margin-top: 3.5rem;
+    //Styling the element with the pseudoelements
+    // ::before and ::after as well
+    &,
+    &::before,
+    &::after {
+      width: 3rem;
+      height: 0.2rem;
+      background-color: $color-grey-dark-3;
+      display: inline-block;
+    }
+
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+    }
+
+    &::before {
+      top: -1rem;
+    }
+    &::after {
+      top: 1rem;
+    }
   }
 }
