--- a/css/style.css
+++ b/css/style.css
@@ -500,6 +500,37 @@ body {
   opacity: 1;
 }
 
+.popup {
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 3500;
+}
+.popup__content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 75%;
+  background-color: #fff;
+  box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
+  border-radius: 0.3rem;
+}
+.popup__left {
+  width: 33.33333%;
+  float: left;
+}
+.popup__right {
+  width: 66.66667%;
+  float: right;
+}
+.popup__img {
+  display: block;
+  max-width: 100%;
+}
 .story {
   width: 75%;
   margin: 0 auto;
@@ -683,7 +714,6 @@ body {
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
   text-align: center;
   cursor: pointer;
-  text-align: center;
 }
 .navigation__background {
   height: 6rem;
@@ -756,12 +786,30 @@ body {
   content: "";
   position: absolute;
   left: 0;
+  transition: all 0.2s;
 }
 .navigation__icon::before {
-  top: -1rem;
+  top: -0.8rem;
 }
 .navigation__icon::after {
+  top: 0.8rem;
+}
+.navigation__button:hover .navigation__icon::before {
+  top: -1rem;
+}
+.navigation__button:hover .navigation__icon::after {
   top: 1rem;
+}
+.navigation__checkbox:checked + .navigation__button .navigation__icon {
+  background-color: transparent;
+}
+.navigation__checkbox:checked + .navigation__button .navigation__icon::before {
+  top: 0;
+  transform: rotate(135deg);
+}
+.navigation__checkbox:checked + .navigation__button .navigation__icon::after {
+  top: 0;
+  transform: rotate(-135deg);
 }
 
 .section-about {
