--- a/css/style.css
+++ b/css/style.css
@@ -518,19 +518,41 @@ body {
   background-color: #fff;
   box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
   border-radius: 0.3rem;
+  display: table;
+  overflow: hidden;
 }
 .popup__left {
   width: 33.33333%;
-  float: left;
+  display: table-cell;
 }
 .popup__right {
   width: 66.66667%;
-  float: right;
+  display: table-cell;
+  vertical-align: middle;
+  padding: 3rem 5rem;
 }
 .popup__img {
   display: block;
   max-width: 100%;
 }
+.popup__text {
+  font-size: 1.4rem;
+  margin-bottom: 4rem;
+  -webkit-column-count: 2;
+  -moz-column-count: 2;
+  column-count: 2;
+  -webkit-column-gap: 4rem;
+  -moz-column-gap: 4rem;
+  column-gap: 4rem;
+  -webkit-column-rule: 0.1rem solid #eee;
+  -moz-column-rule: 0.1rem solid #eee;
+  column-rule: 0.1rem solid #eee;
+  -moz-hyphens: auto;
+  -ms-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
+
 .story {
   width: 75%;
   margin: 0 auto;
