--- a/css/style.scss
+++ b/css/style.scss
@@ -1,20 +1,3 @@
-/*
-
-0 - 600px       Phone
-600 - 900px     Tablet portrait mode
-900 - 1200px    Tablet landscape
-[1200 - 1800] is were normal style is applied
-1800 <          Large desktops
-
-
-$breakpoint argument choices:
-- phone
-- tab-port
-- tab-land
-- big-desktop
-
-1em = 16px
-*/
 *,
 *::after,
 *::before {
@@ -25,6 +8,21 @@ $breakpoint argument choices:
 
 html {
   font-size: 62.5%;
+}
+@media (max-width: 75em) {
+  html {
+    font-size: 56.25%;
+  }
+}
+@media (max-width: 56.25em) {
+  html {
+    font-size: 50%;
+  }
+}
+@media (min-width: 112.5em) {
+  html {
+    font-size: 75%;
+  }
 }
 
 body {
@@ -176,12 +174,6 @@ body {
 }
 
 /* ----- Button ----- */
-.btn {
-  /*
-    pseudoelement to illustrate an illusion of an element
-     for animation and other effects. Must contain 'content'
-     */
-}
 .btn, .btn:link, .btn:visited {
   text-decoration: none;
   text-transform: uppercase;
@@ -189,7 +181,6 @@ body {
   display: inline-block;
   border-radius: 10rem;
   transition: all 0.2s;
-  /* shorthand for transition */
   position: relative;
   font-size: 1.6rem;
   border: none;
@@ -237,7 +228,6 @@ body {
 .btn--animated {
   animation: moveInBottom 0.5s ease-out 0.75s;
   animation-fill-mode: backwards;
-  /* make button invisible on pageload */
 }
 
 .btn-text:link, .btn-text:visited {
