--- a/sass/abstracts/_mixin.scss
+++ b/sass/abstracts/_mixin.scss
@@ -28,23 +28,19 @@
 
 // Media Query manager
 
-/*
+// 0 - 600px       Phone
+// 600 - 900px     Tablet portrait mode
+// 900 - 1200px    Tablet landscape
+// [1200 - 1800] is were normal style is applied
+// 1800 <          Large desktops
 
-0 - 600px       Phone
-600 - 900px     Tablet portrait mode
-900 - 1200px    Tablet landscape
-[1200 - 1800] is were normal style is applied
-1800 <          Large desktops
+// $breakpoint argument choices:
+// - phone
+// - tab-port
+// - tab-land
+// - big-desktop
 
-
-$breakpoint argument choices:
-- phone
-- tab-port
-- tab-land
-- big-desktop
-
-1em = 16px
-*/
+// 1em = 16px
 
 @mixin respond($breakpoint) {
   @if $breakpoint == phone {
