--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -187,4 +187,41 @@
     font-size: 6rem;
     font-weight: 100;
   }
+
+  // Media Query for touch devices
+  @include respond(tab-port) {
+    height: auto;
+
+    &__side {
+      height: auto;
+      position: relative;
+      border-radius: 0.3rem;
+
+      &--back {
+        transform: rotateY(0);
+      }
+    }
+
+    // On hover the side transform
+    &:hover &__side--front {
+      transform: rotateY(0);
+    }
+
+    // Back side styling
+    &__cta {
+      position: relative;
+      top: 0;
+      left: 0;
+      transform: translate(0);
+      width: 100%;
+    }
+
+    &__price-box {
+      margin-bottom: 8rem;
+    }
+
+    &__price-value {
+      font-size: 6rem;
+    }
+  }
 }
