--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -13,6 +13,11 @@
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 79vh, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 79vh, 0 100%);
 
+  @include respond(tab-port) {
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 82vh, 0 94%);
+    clip-path: polygon(0 0, 100% 0, 100% 82vh, 0 94%);
+  }
+
   &__logo-box {
     position: absolute;
     top: 4rem;
