--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,6 +1,6 @@
 /* ----- Header -----*/
 .header {
-  height: 95vh;
+  height: 85vh;
   position: relative;
   background-image: linear-gradient(
       to right bottom,
@@ -10,13 +10,20 @@
     url(../img/hero-small.jpg); // For small resolution screens
   background-size: cover;
   background-position: top;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 79vh, 0 100%);
-  clip-path: polygon(0 0, 100% 0, 100% 79vh, 0 100%);
+
+  @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 79vh, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 79vh, 0 100%);
+    height: 95vh;
+  }
 
   // Whenever the resolution is higher than 192 dots per inch
   // the code in the @media will be applied
   // For high resolution screens above 600px screen width and extra large low resolutions screens
-  @media (min-resolution: 192dpi) and (min-width: 37.5em), (min-width: 125em) {
+  // with a webkit for Safari browser
+  @media (min-resolution: 192dpi) and (min-width: 37.5em),
+    (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+    (min-width: 125em) {
     background-image: linear-gradient(
         to right bottom,
         rgba($color-primary-light, 0.6),
